--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "private": false,
   "scripts": {
+    "test": "bun test",
     "dev": "bun run --watch src/index.ts"
   },
   "module": "src/index.ts",
