--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "private": false,
   "scripts": {
+    "build": "bun build src/index.ts --outdir dist",
     "test": "bun test",
     "dev": "bun run --watch src/index.ts"
   },
